поправил ошибки кода по styleguide после npm test

--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,6 +1,6 @@
 .page-main {
   box-sizing: border-box;
-  font-family: "Oswald Medium", Arial, sans-serif;
+  font-family: "Oswald Medium", "Arial", sans-serif;
   width: $small-width;
   background-color: #ffffff;
 }
