--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -5,13 +5,11 @@
   padding-left: 30px;
   padding-right: 30px;
 
-  font-family: "Oswald Regular", Arial, sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
   text-transform: uppercase;
   color: #ffffff;
   background-color: #68b738;
-
-
 }
