--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   box-sizing: border-box;
   margin: 0 auto;
-  font-family: "Oswald Medium", Arial, sans-serif;
+  font-family: "Oswald Medium", "Arial", sans-serif;
   text-transform: uppercase;
   width: $small-width;
   background-color: #ffffff;
