--- a/source/sass/blocks/page-header__wrapper.scss
+++ b/source/sass/blocks/page-header__wrapper.scss
@@ -2,7 +2,8 @@
   box-sizing: border-box;
 
   padding: 0 20px;
-  font-family: "Oswald Medium", Arial, sans-serif;
+
+  font-family: "Oswald Medium", "Arial", sans-serif;
   text-transform: uppercase;
 
   background-color: #ffffff;
