--- a/source/sass/blocks/page-main__wrapper.scss
+++ b/source/sass/blocks/page-main__wrapper.scss
@@ -1,7 +1,5 @@
 .page-main__wrapper {
   box-sizing: border-box;
   padding: 0 20px;
-  font-family: "Oswald Medium", Arial, sans-serif;
-
-/*  background-color: #6eb245;*/
+  font-family: "Oswald Medium", "Arial", sans-serif;
 }
