--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -10,7 +10,7 @@
   min-height: 480px;
 
 
-  font-family: "Oswald Regular", Arial, sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   color: #ffffff;
   text-align: center;
 }
