--- a/source/sass/blocks/site-grid.scss
+++ b/source/sass/blocks/site-grid.scss
@@ -1,5 +1,5 @@
 .site-grid {
-  font-family: "Oswald Regular", Arial, sans-serif;
+  font-family: "Oswald Regular", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
