Добавил блоки стилей для index.html, внес правки в html разметку index.html для стилей

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 @import "variables.scss";
 @import "mixin.scss";
 @import "base.scss";
+@import "blocks/visually-hidden.scss";
 @import "blocks/site-grid";
 @import "blocks/site-grid__wrapper";
 @import "blocks/page-header.scss";
@@ -19,3 +20,30 @@
 @import "blocks/promo__image.scss";
 @import "blocks/promo__button.scss";
 @import "blocks/button.scss";
+@import "blocks/categories.scss";
+@import "blocks/categories-item.scss";
+@import "blocks/categories-item__title.scss";
+@import "blocks/categories-item__about.scss";
+@import "blocks/categories-button.scss";
+@import "blocks/advantages.scss";
+@import "blocks/advantages__title.scss";
+@import "blocks/advantages__list.scss";
+@import "blocks/advantages-list.scss";
+@import "blocks/advantages-list__item.scss";
+@import "blocks/example.scss";
+@import "blocks/example__title.scss";
+@import "blocks/example__about.scss";
+@import "blocks/example__expenses.scss";
+@import "blocks/progress.scss";
+@import "blocks/progress__value.scss";
+@import "blocks/progress__type.scss";
+@import "blocks/contacts.scss";
+@import "blocks/contacts__wrapper.scss";
+@import "blocks/contacts__slogan.scss";
+@import "blocks/contacts__content.scss";
+@import "blocks/contacts__map.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/page-footer__site-title.scss";
+@import "blocks/page-footer__social.scss";
+@import "blocks/social.scss";
+@import "blocks/copyright.scss";
