добавил блоки стилей для catalog.html, доработал index.html, catalog.html form.html

--- a/source/sass/blocks/burger-menu.scss
+++ b/source/sass/blocks/burger-menu.scss
@@ -1,7 +1,7 @@
 .burger-menu {
   position: relative;
 
-  background-color: transparent;
+  background-color: #000000;
   width: 24px;
   height: 2px;
   border: none;
