--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -10,6 +10,9 @@
   line-height: 18px;
   font-weight: 400;
   text-transform: uppercase;
+  text-align: center;
+  vertical-align: middle;
   color: #ffffff;
+
   background-color: #68b738;
 }
