--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,4 +2,8 @@
   font-family: "Oswald Regular", "Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
+
+  &--background-gray {
+    background-color: #f2f2f2;
+  }
 }
