--- a/source/sass/blocks/main-menu__link.scss
+++ b/source/sass/blocks/main-menu__link.scss
@@ -1,3 +1,7 @@
 .main-menu__link {
+  display: block;
   word-wrap: break-word;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #e6e6e6;
 }
