--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 @import "blocks/site-grid__wrapper";
 @import "blocks/page-header.scss";
 @import "blocks/page-header__wrapper";
+@import "blocks/page-header__logo-link";
 @import "blocks/page-header__logo-image";
 @import "blocks/burger-menu.scss";
 @import "blocks/main-menu__list.scss";
@@ -47,3 +48,12 @@
 @import "blocks/page-footer__social.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
+@import "blocks/page-main__title.scss";
+@import "blocks/page-main__products.scss";
+@import "blocks/product.scss";
+@import "blocks/product__title.scss";
+@import "blocks/table-properties.scss";
+@import "blocks/product__button.scss";
+@import "blocks/more-product__content.scss";
+@import "blocks/more-product__description.scss";
+@import "blocks/more-product__text.scss";
