--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -8,3 +8,12 @@
 
   background-color: #f2f2f2;
 }
+
+.page-footer__site-title {
+  margin-bottom: 30px;
+}
+
+.page-footer__social {
+  margin-bottom: 22px;
+  text-align: center;
+}
