--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -4,3 +4,14 @@
   padding-right: 20px;
   padding-bottom: 42px;
 }
+
+.advantages__title {
+  margin: 0;
+  margin-bottom: 30px;
+
+  font-family: $oswaldRegular;
+  font-size: $largeFontSize;
+  line-height: 60px;
+  font-weight: 400;
+  color: $basicFontColor;
+}
