--- a/source/sass/blocks/categories-item.scss
+++ b/source/sass/blocks/categories-item.scss
@@ -12,3 +12,53 @@
 .categories-item:last-of-type {
   margin-bottom: 0;
 }
+
+.categories-item__title {
+  position: relative;
+
+  margin: 0;
+  padding-left: 70px;
+
+  font-size: $mediumFontSize;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: $basicFontColor;
+
+  padding-top: 38px;
+  padding-bottom: 35px;
+
+  &::before {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: #68b738;
+    border-radius: 50%;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    left: 10px;
+    top: 20px;
+    width: 35px;
+    height: 49px;
+    background-image: url("../img/icon-cat-slim.svg");
+    background-repeat: no-repeat;
+  }
+}
+
+.categories-item__about {
+  margin: 0;
+  margin-bottom: 20px;
+  padding-bottom: 40px;
+
+  border-bottom: 1px solid #d9d9d9;
+
+  font-family: "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  color: $thirdFontColor;
+}
