--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,9 +1,10 @@
 .copyright {
   padding-top: 24px;
 
-  border-top: 1px solid #d9d9d9;
+  border-top: $borderGrayTypeFour;
 
   font-family: "Arial", sans-serif;
-  font-size: 16px;
+  font-size: $basicFontSize;
   line-height: 16px;
+  color: $thirdFontColor;
 }
