--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -6,3 +6,32 @@
 
   background-color: #f2f2f2;
 }
+
+.example__title {
+  margin: 0;
+
+  font-family: $oswaldRegular;
+  font-weight: 400;
+  font-size: $largeFontSize;
+  line-height: 60px;
+  color: $basicFontColor;
+}
+
+.example__about {
+  margin: 0;
+  margin-bottom: 25px;
+
+  font-family: "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  color: $thirdFontColor;
+}
+
+.example__expenses {
+  font-family: $oswaldRegular;
+  font-size: $smallFontSize;
+  line-height: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  color: $basicFontColor;
+}
