--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -3,3 +3,24 @@
 
   border-bottom: 1px solid #ededed;
 }
+
+.product__title {
+  margin: 0;
+
+  font-family: $oswaldRegular;
+  font-size: $basicFontSize;
+  line-height: 20px;
+  color: $basicFontColor;
+}
+
+.product__button {
+  display: inline-block;
+
+  font-size: $basicFontSize;
+  line-height: 20px;
+
+  &--gray {
+    background-color: #f2f2f2;
+    color: $fourthFontColor;
+  }
+}
