--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -14,3 +14,35 @@
   color: #ffffff;
   text-align: center;
 }
+
+.promo__title {
+  margin: 0;
+  margin-bottom: 20px;
+
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 400;
+}
+
+.promo__slogan {
+  display: inline-block;
+  margin-bottom: 30px;
+
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 14px;
+  text-transform: uppercase;
+}
+
+.promo__image {
+  margin-bottom: 3px;
+
+  background-image: url("../img/index-can-mobile@1x.png");
+  background-repeat: no-repeat;
+  width: 280px;
+  height: 100%;
+}
+
+.promo__button {
+  display: inline-block;
+}
