--- a/source/sass/blocks/table-properties.scss
+++ b/source/sass/blocks/table-properties.scss
@@ -1,5 +1,6 @@
 .table-properties {
   font-family: "Arial", sans-serif;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: $tinyFontSize;
+  line-height: $basicLineHeight;
+  color: $thirdFontColor;
 }
