--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,56 +4,30 @@
 @import "base.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/site-grid";
-@import "blocks/site-grid__wrapper";
 @import "blocks/page-header.scss";
-@import "blocks/page-header__wrapper";
-@import "blocks/page-header__logo-link";
-@import "blocks/page-header__logo-image";
 @import "blocks/burger-menu.scss";
-@import "blocks/main-menu__list.scss";
-@import "blocks/main-menu__item.scss";
-@import "blocks/main-menu__link.scss";
+@import "blocks/main-menu.scss";
 @import "blocks/page-main.scss";
-@import "blocks/page-main__wrapper.scss";
 @import "blocks/promo.scss";
-@import "blocks/promo__title.scss";
-@import "blocks/promo__slogan.scss";
-@import "blocks/promo__image.scss";
-@import "blocks/promo__button.scss";
 @import "blocks/button.scss";
 @import "blocks/categories.scss";
 @import "blocks/categories-item.scss";
-@import "blocks/categories-item__title.scss";
-@import "blocks/categories-item__about.scss";
 @import "blocks/categories-button.scss";
 @import "blocks/advantages.scss";
-@import "blocks/advantages__title.scss";
-@import "blocks/advantages__list.scss";
 @import "blocks/advantages-list.scss";
-@import "blocks/advantages-list__item.scss";
 @import "blocks/example.scss";
-@import "blocks/example__title.scss";
-@import "blocks/example__about.scss";
-@import "blocks/example__expenses.scss";
 @import "blocks/progress.scss";
-@import "blocks/progress__value.scss";
-@import "blocks/progress__type.scss";
 @import "blocks/contacts.scss";
-@import "blocks/contacts__wrapper.scss";
-@import "blocks/contacts__slogan.scss";
-@import "blocks/contacts__content.scss";
-@import "blocks/contacts__map.scss";
 @import "blocks/page-footer.scss";
-@import "blocks/page-footer__site-title.scss";
-@import "blocks/page-footer__social.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
-@import "blocks/page-main__title.scss";
-@import "blocks/page-main__products.scss";
+@import "blocks/products.scss";
 @import "blocks/product.scss";
-@import "blocks/product__title.scss";
 @import "blocks/table-properties.scss";
-@import "blocks/product__button.scss";
-@import "blocks/more-product__content.scss";
-@import "blocks/more-product__description.scss";
-@import "blocks/more-product__text.scss";
+@import "blocks/more-product.scss";
+@import "blocks/extra-products.scss";
+@import "blocks/extra-product.scss";
+@import "blocks/extra-bonus.scss";
+@import "blocks/slider.scss";
+@import "blocks/program-form.scss";
+@import "blocks/about-cat.scss";
