--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,5 @@
 @import "fonts.scss";
 @import "variables.scss";
-@import "mixin.scss";
 @import "base.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/site-grid";
@@ -12,6 +11,8 @@
 @import "blocks/button.scss";
 @import "blocks/categories.scss";
 @import "blocks/categories-item.scss";
+@import "blocks/categories-pro.scss";
+@import "blocks/categories-slim.scss";
 @import "blocks/categories-button.scss";
 @import "blocks/advantages.scss";
 @import "blocks/advantages-list.scss";
