--- a/source/sass/blocks/categories-item.scss
+++ b/source/sass/blocks/categories-item.scss
@@ -17,43 +17,21 @@
   position: relative;
 
   margin: 0;
+  margin-bottom: 20px;
   padding-left: 70px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
   font-size: $mediumFontSize;
   font-weight: 400;
   text-transform: uppercase;
   color: $basicFontColor;
-
-  padding-top: 38px;
-  padding-bottom: 35px;
-
-  &::before {
-    position: absolute;
-    content: "";
-    left: 0;
-    top: 20px;
-    width: 50px;
-    height: 50px;
-    background-color: #68b738;
-    border-radius: 50%;
-  }
-
-  &::after {
-    position: absolute;
-    content: "";
-    left: 10px;
-    top: 20px;
-    width: 35px;
-    height: 49px;
-    background-image: url("../img/icon-cat-slim.svg");
-    background-repeat: no-repeat;
-  }
 }
 
 .categories-item__about {
   margin: 0;
   margin-bottom: 20px;
-  padding-bottom: 40px;
+  padding-bottom: 22px;
 
   border-bottom: 1px solid #d9d9d9;
 
