--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -9,14 +9,22 @@
 }
 
 .contacts__wrapper {
+  padding-top: 28px;
+  padding-bottom: 26px;
   padding-left: 20px;
   padding-right: 20px;
+
+  display: flex;
+  justify-content: flex-start;
+  flex-basis: 140px;
 }
 
 .contacts__slogan {
   margin: 0;
+
   text-transform: uppercase;
   color: $basicFontColor;
+  letter-spacing: 0.4px;
 }
 
 .contacts__content {
