--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,14 +1,19 @@
 .example {
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 30px;
-  padding-left: 20px;
-  padding-right: 20px;
 
   background-color: #f2f2f2;
 }
 
+.example__wrapper {
+  margin-bottom: 35px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .example__title {
   margin: 0;
+  margin-bottom: 23px;
 
   font-family: $oswaldRegular;
   font-weight: 400;
@@ -20,6 +25,7 @@
 .example__about {
   margin: 0;
   margin-bottom: 25px;
+  padding-right: 5px;
 
   font-family: "Arial", sans-serif;
   font-size: 14px;
@@ -27,7 +33,16 @@
   color: $thirdFontColor;
 }
 
+.example__progress {
+  margin-bottom: 34px;
+
+  display: flex;
+  justify-content: space-between;
+}
+
 .example__expenses {
+  margin: 0;
+
   font-family: $oswaldRegular;
   font-size: $smallFontSize;
   line-height: 20px;
