--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -9,8 +9,12 @@
 .main-menu__link {
   display: block;
   word-wrap: break-word;
-  padding-top: 24px;
-  padding-bottom: 24px;
+
+  padding-top: 22px;
+  padding-bottom: 23px;
   border-bottom: $borderGrayTypeOne;
+
+  font-size: 20px;
+  line-height: 20px;
   color: $basicFontColor;
 }
