--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -8,19 +8,20 @@
 }
 
 .page-header__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   box-sizing: border-box;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 14px;
+  padding-bottom: 13px;
+  padding-left: 20px;
+  padding-right: 20px;
 
   border-bottom: 1px solid #e6e6e6;
 
   font-family: "Oswald Medium", "Arial", sans-serif;
   text-transform: uppercase;
-}
-
-.page-header__logo-link {
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .page-header__logo-image {
