--- a/source/sass/blocks/more-product.scss
+++ b/source/sass/blocks/more-product.scss
@@ -29,6 +29,7 @@
 
 .more-product__description {
   margin: 0;
+  margin-bottom: 7px;
 
   font-family: $oswaldRegular;
   font-size: $basicFontSize;
