--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -1,8 +1,15 @@
 body {
   margin: 0;
+  min-width: 320px;
 }
 
 a {
   color: #000000;
   text-decoration: none;
+}
+
+@media (min-width: 768px) {
+  body {
+    min-width: 768px;
+  }
 }
