--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -15,3 +15,18 @@
   font-weight: 400;
   color: $basicFontColor;
 }
+
+@media (min-width: 768px) {
+  .advantages {
+    padding-top: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 55px;
+  }
+
+  .advantages__list {
+    display: flex;
+    flex-wrap: wrap;
+    width: inherit;
+  }
+}
