--- a/source/sass/blocks/categories-item.scss
+++ b/source/sass/blocks/categories-item.scss
@@ -36,7 +36,38 @@
   border-bottom: 1px solid #d9d9d9;
 
   font-family: "Arial", sans-serif;
-  font-size: 14px;
+  font-size: $smallFontSize;
   line-height: 18px;
   color: $thirdFontColor;
+}
+
+@media (min-width: 768px) {
+  .categories-item {
+    padding-top: 40px;
+    padding-left: 50px;
+    padding-right: 280px;
+    padding-bottom: 60px;
+
+    background-color: #f2f2f2;
+  }
+
+  .categories-item--max-padding {
+    padding-right: 315px;
+  }
+
+  .categories-item__title {
+    margin-bottom: 0;
+    padding-left: 0;
+
+    font-size: $largeFontSize;
+    line-height: 60px;
+    color: $basicFontColor;
+  }
+
+  .categories-item__about {
+    margin-bottom: 40px;
+    font-size: $basicFontSize;
+    line-height: $mediumLineHeight;
+    border-bottom: none;
+  }
 }
