--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -3,3 +3,11 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+@media (min-width: 768px) {
+  .categories {
+    padding-top: 22px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
