--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -50,3 +50,10 @@
   text-align: center;
   color: $basicFontColor;
 }
+
+@media (min-width: 768px) {
+  .example {
+    min-height: 1080px;
+    background: linear-gradient(to bottom, #ffffff 0, #ffffff 620px, #f2f2f2 620px, #f2f2f2 100%);
+  }
+}
