--- a/source/sass/blocks/extra-product.scss
+++ b/source/sass/blocks/extra-product.scss
@@ -7,11 +7,15 @@
 
 .extra-product__title {
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 9px;
 
   font-family: $oswaldRegular;
-  font-size: $mediumFontSize;
+  font-size: $basicFontSize;
   font-weight: 400;
   color: $secondaryFontColor;
   text-transform: uppercase;
+}
+
+.extra-product__table {
+  width: 100%;
 }
