--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -18,3 +18,35 @@
   line-height: 20px;
   color: $basicFontColor;
 }
+
+@media (min-width: 768px) {
+  .main-menu {
+    flex-basis: 440px;
+    width: 440px;
+  }
+
+  .main-menu__list {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .main-menu__link {
+    border-bottom: none;
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .main-menu__link--current {
+    position: relative;
+  }
+
+  .main-menu__link--current::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 2px;
+    bottom: 12px;
+    left: 0;
+    background-color: #68b738;
+  }
+}
