--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -3,3 +3,11 @@
 
   border-top: 1px solid #d9d9d9;
 }
+
+@media (min-width: 768px) {
+  .social {
+    padding-top: 0;
+
+    border-top: none;
+  }
+}
