--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -30,3 +30,19 @@
     width: inherit;
   }
 }
+
+@media (min-width: 1440px) {
+  .advantages {
+    padding-top: 50px;
+    padding-left: 110px;
+    padding-right: 110px;
+    padding-bottom: 55px;
+  }
+
+  .advantages__list {
+    display: flex;
+    flex-wrap: no-wrap;
+    justify-content: space-between;
+    width: inherit;
+  }
+}
