--- a/source/sass/blocks/categories-item.scss
+++ b/source/sass/blocks/categories-item.scss
@@ -71,3 +71,33 @@
     border-bottom: none;
   }
 }
+
+@media (min-width: 1440px) {
+  .categories-item {
+    margin-bottom: 0;
+    padding-top: 75px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 60px;
+
+    background-color: #f2f2f2;
+  }
+
+  .categories-item--max-padding {
+    padding-right: 60px;
+  }
+
+  .categories-item__title {
+    margin-bottom: 0;
+    padding-left: 165px;
+    padding-bottom: 80px;
+  }
+
+  .categories-item__about {
+    margin-bottom: 35px;
+    padding-bottom: 0;
+    font-size: $basicFontSize;
+    line-height: $mediumLineHeight;
+    border-bottom: none;
+  }
+}
