--- a/source/sass/blocks/extra-products.scss
+++ b/source/sass/blocks/extra-products.scss
@@ -28,3 +28,25 @@
 .extra-product__button {
   display: inline-block;
 }
+
+@media (min-width: 768px) {
+  .extra-products {
+    padding: 0;
+  }
+
+  .extra-products__title {
+    position: relative;
+    z-index: 1;
+
+    &::before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 5px;
+      background: green;
+      top: 50%;
+      transform: translateY(-25%);
+      z-index: -1;
+    }
+  }
+}
