--- a/source/sass/blocks/more-product.scss
+++ b/source/sass/blocks/more-product.scss
@@ -48,3 +48,43 @@
   text-align: center;
   color: $thirdFontColor;
 }
+
+@media (min-width: 768px) {
+  .more-product {
+    border: $borderGrayTypeOne;
+  }
+
+  .more-product__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    background-color: #ffffff;
+  }
+
+  .more-product__content {
+    padding-top: 160px;
+
+    &::before {
+      width: 60px;
+      top: 78px;
+    }
+
+    &::after {
+      height: 60px;
+      top: 49px;
+    }
+  }
+
+  .more-product__description {
+    font-size: $lowFontSize;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .more-product__text {
+    font-size: $basicFontSize;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
