--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -34,7 +34,6 @@
     display: flex;
     justify-content: space-between;
     width: $mediumDeviceWidth;
-    min-width: 100px;
     padding: 0 30px;
   }
 
@@ -43,5 +42,32 @@
     padding-left: 0;
     padding-right: 0;
     border: none;
+  }
+}
+
+@media (min-width: 1440px) {
+  .page-header {
+    padding: 0;
+    width: $largeDeviceWidth;
+    background: linear-gradient(to right, #ffffff 0, #ffffff 50%, #65a93c 50%, #65a93c 100%);
+    background-image: url("../img/index-background-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 100%;
+    min-height: 696px;
+  }
+
+  .page-header--no-promo {
+    min-height: 0;
+    background: transparent;
+  }
+
+  .page-header__wrapper {
+    padding-left: 110px;
+    padding-top: 75px;
+  }
+
+  .page-header__main-menu {
+    padding-right: 110px;
+    padding-top: 75px;
   }
 }
