--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -44,3 +44,30 @@
     color: $thirdFontColor;
   }
 }
+
+@media (min-width: 768px) {
+  .product {
+    border-bottom: none;
+    padding-left: 38px;
+    padding-right: 38px;
+
+    background-color: $bgColorTypeOne;
+  }
+
+  .product__content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product__title {
+    padding: 0 70px;
+    padding-top: 50px;
+    text-align: center;
+    font-size: $lowFontSize;
+  }
+
+  .product__button {
+    box-sizing: border-box;
+    width: 248px;
+  }
+}
