--- a/source/sass/blocks/extra-products.scss
+++ b/source/sass/blocks/extra-products.scss
@@ -1,8 +1,3 @@
-.extra-products {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
 .extra-products__title {
   display: block;
 
@@ -17,6 +12,7 @@
   margin: 0;
   padding-top: 29px;
   padding-bottom: 34px;
+  padding-left: 20px;
 
   border-bottom: $borderGrayTypeThree;
 }
@@ -31,11 +27,8 @@
 
 @media (min-width: 768px) {
   .extra-products {
-    padding: 0;
-  }
-
-  .extra-products__title {
     position: relative;
+    padding: 0;
     z-index: 1;
 
     &::before {
@@ -44,9 +37,13 @@
       width: 100%;
       height: 5px;
       background: green;
-      top: 50%;
-      transform: translateY(-25%);
+      top: 40px;
       z-index: -1;
     }
   }
+
+  .extra-products__title  {
+    background: linear-gradient(to right, #ffffff 0, #ffffff 300px, transparent 100px);
+  }
+
 }
