--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -5,8 +5,15 @@
 }
 
 .page-main__wrapper {
+  box-sizing: border-box;
   width: $smallDeviceWidth;
   margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.page-main__wrapper--no-padding {
+  padding: 0;
 }
 
 .page-main__title {
@@ -30,7 +37,7 @@
 
 @media (min-width: 768px) {
   .page-main__wrapper {
-    width: $mediumDeviceWidth;
+    min-width: $mediumDeviceWidth;
     margin: 0 auto;
   }
 
@@ -57,7 +64,7 @@
   .page-main__products {
     box-sizing: border-box;
     margin: 0 auto;
-    width: $mediumDeviceWidth;
+    width: calc($mediumDeviceWidth - 60px);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -79,13 +86,16 @@
     display: flex;
     align-items: stretch;
   }
+
+  .page-main__extra-products {
+    box-sizing: border-box;
+    width: 100%;
+  }
 }
 
-@media (min-width: 1440px) {
-  .page-main {
-    width: $largeDeviceWidth;
-  }
 
+
+@media (min-width: 1440px) {
   .page-main__categories {
     display: flex;
     justify-content: space-between;
