--- a/source/sass/blocks/extra-product.scss
+++ b/source/sass/blocks/extra-product.scss
@@ -1,6 +1,8 @@
 .extra-product {
   padding-top: 14px;
   padding-bottom: 17px;
+  padding-left: 20px;
+  padding-right: 20px;
 
   border-bottom: $borderGrayTypeThree;
 }
@@ -17,5 +19,43 @@
 }
 
 .extra-product__table {
+  margin-bottom: 10px;
   width: 100%;
+}
+
+.extra-product__button {
+  display: inline-block;
+}
+
+@media (min-width: 768px) {
+  .extra-product {
+    padding-left: 38px;
+    padding-right: 38px;
+  }
+
+  .extra-product--border-top {
+    border-top: $borderGrayTypeThree;
+  }
+
+  .extra-products__title  {
+    padding-left: 35px;
+    background: linear-gradient(to right, transparent 0, transparent 30px,
+      #ffffff 30px, #ffffff 340px, transparent 340px, transparent 100%);
+    border-bottom: none;
+  }
+
+  .extra-product__content {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+
+  .extra-product__table {
+    line-height: 10px;
+    width: 230px;
+  }
+
+  .extra-product__button {
+    display: block;
+  }
 }
