--- a/source/sass/blocks/extra-bonus.scss
+++ b/source/sass/blocks/extra-bonus.scss
@@ -1,11 +1,14 @@
-.extrta-bonus {
+.extra-bonus {
   padding-top: 39px;
   padding-bottom: 35px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.extrta-bonus__wrapper {
+.extra-bonus__wrapper {
   position: relative;
 
+  background-color: #70b447;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
   padding-left: 60px;
@@ -24,7 +27,7 @@
   }
 }
 
-.extrta-bonus__content {
+.extra-bonus__content {
   margin: 0;
 
   font-family: "Arial", sans-serif;
@@ -32,4 +35,32 @@
   line-height: 20px;
   color: #ffffff;
   text-align: center;
+}
+
+@media (min-width: 768px) {
+  .extra-bonus {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .extra-bonus__wrapper {
+    box-sizing: border-box;
+    padding: 0;
+    background-color: #70b447;
+    padding-left: 420px;
+    padding-top: 65px;
+
+    //временные стили
+    width: 708px;
+    height: 200px;
+    background-image: none;
+  }
+
+  .extra-bonus__content {
+    text-align: left;
+    padding: 0;
+    padding-right: 100px;
+
+  }
+
 }
