--- a/source/sass/blocks/extra-bonus.scss
+++ b/source/sass/blocks/extra-bonus.scss
@@ -60,7 +60,27 @@
     text-align: left;
     padding: 0;
     padding-right: 100px;
+  }
+}
 
+@media (min-width: 1440px) {
+  .extra-bonus {
+    padding: 0;
   }
 
+  .extra-bonus__wrapper {
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 185px;
+
+    //временные стили
+    width: 245px;
+    height: 288px;
+    background-image: none;
+  }
+
+  .extra-bonus__content {
+    text-align: center;
+    padding: 0;
+  }
 }
