--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,6 +1,13 @@
-@media (min-width:768px) {
+@media (min-width: 768px) {
   .products {
     padding-left: 30px;
     padding-right: 30px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .products {
+    padding-left: 110px;
+    padding-right: 110px;
   }
 }
