--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,3 +33,5 @@
 @import "blocks/slider.scss";
 @import "blocks/program-form.scss";
 @import "blocks/about-cat.scss";
+@import "blocks/purpose.scss";
+@import "blocks/client-contacts.scss";
