--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -34,6 +34,10 @@
   }
 }
 
+.page-main__program-form {
+  width: 100%;
+}
+
 @media (min-width: 768px) {
   .page-main__wrapper {
     min-width: $mediumDeviceWidth;
