--- a/source/sass/blocks/program-form.scss
+++ b/source/sass/blocks/program-form.scss
@@ -1,5 +1,4 @@
 .program-form__description {
-  margin: 0;
   margin-bottom: 35px;
   padding-left: 20px;
   padding-right: 20px;
@@ -9,4 +8,19 @@
   line-height: 18px;
   text-transform: uppercase;
   color: $basicFontColor;
+}
+
+.program-form__item {
+  box-sizing: border-box;
+  width: 100%;
+  border: none;
+  margin-bottom: 20px;
+  border: none;
+  border-bottom: $borderGrayTypeTwo;
+}
+
+.program-form__purpose {
+  margin-bottom: 20px;
+
+  width: 100%;
 }
