--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -35,3 +35,5 @@
 @import "blocks/about-cat.scss";
 @import "blocks/purpose.scss";
 @import "blocks/client-contacts.scss";
+@import "blocks/comment.scss";
+@import "blocks/optionally.scss";
