--- a/source/sass/blocks/client-contacts.scss
+++ b/source/sass/blocks/client-contacts.scss
@@ -3,8 +3,6 @@
   padding: 0;
   padding-top: 23px;
   padding-bottom: 23px;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .client-contacts__inner {
@@ -14,6 +12,7 @@
   width: $smallDeviceWidth;
   padding-left: 20px;
   padding-right: 20px;
+}
 
 .client-contacts__wrapper {
   margin-top: 14px;
