--- a/source/sass/blocks/comment.scss
+++ b/source/sass/blocks/comment.scss
@@ -15,7 +15,10 @@
 }
 
 .comment__title {
+  display: block;
   margin-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .comment__text {
@@ -24,4 +27,18 @@
   width: 100%;
   border: none;
   border: $borderGrayTypeOne;
+}
+
+@media (min-width: 768px) {
+  .comment__title {
+    margin-bottom: 20px;
+    padding-left: 71px;
+  }
+
+  .comment__inner {
+    width: $mediumDeviceWidth;
+    height: 174px;
+    padding-left: 71px;
+    padding-right: 71px;
+  }
 }
