--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -40,19 +40,22 @@
 
 @media (min-width: 768px) {
   .page-main__wrapper {
-    min-width: $mediumDeviceWidth;
+    width: $mediumDeviceWidth;
     margin: 0 auto;
   }
 
   .page-main__title {
     margin: 0 auto;
-    width: $mediumDeviceWidth;
-    border-bottom: none;
-    text-align: left;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 30px;
     padding-bottom: 25px;
+    width: $mediumDeviceWidth;
+    border-bottom: none;
+
+    font-size: $bigFontSize;
+    text-align: left;
+
   }
 
   .page-main__promo {
