--- a/source/sass/blocks/purpose.scss
+++ b/source/sass/blocks/purpose.scss
@@ -6,6 +6,16 @@
 }
 
 .purpose__inner {
+  box-sizing: border-box;
+  width: $smallDeviceWidth;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  display: flex;
+}
+
+.purpose__wrapper {
+  width: $smallDeviceWidth;
   display: flex;
   flex-direction: column;
 }
@@ -13,4 +23,59 @@
 .purpose__radio-label {
   margin-bottom: 25px;
   padding-left: 46px;
+}
+
+.purpose__radio-label:last-of-type {
+  margin-bottom: 0;
+}
+
+.purpose__radio-label {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 28px;
+    height: 28px;
+    border: 1px solid #cecece;
+    border-radius: 50%;
+    left: 0;
+    top: -6px;
+  }
+}
+
+.purpose__radio:checked + .purpose__radio-label::after {
+  position: absolute;
+  content: "";
+  width: 12px;
+  height: 12px;
+  background-color: #68b738;
+  border-radius: 50%;
+  left: 9px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.purpose__radio:disabled + .purpose__radio-label {
+  opacity: 0.5;
+}
+
+@media (min-width: 768px) {
+  .purpose__inner {
+    width: $mediumDeviceWidth;
+    padding-left: 71px;
+    padding-right: 71px;
+  }
+
+  .purpose__wrapper {
+    padding-top: 23px;
+    padding-bottom: 23px;
+    padding-left: 27px;
+    padding-right: 27px;
+    border: $borderGrayTypeOne;
+
+    width: 630px;
+    display: flex;
+    flex-direction: column;
+  }
 }
